# DGAT

./: .dgatignore  .gitignore  AGENTS.md  AGENTS.md.backup  CMakeLists.txt  DGAT_COMPLETE_GUIDE.md  LICENSE  LLM_PROMPTS_AND_INPUTS.md  MANIFEST.in  PYPI_README.md  README.md  dep_graph.json  dgat  dgat.cpp  dgat_gui.html  inja.hpp  install.sh  install1.sh  opencode.jsonc  openrouter_config.json  pyproject.toml  read.py  test.cpp  test.sh  tree-sitter-config.json.in  tree_gui.html  tree_output.txt  tree_visualization.dot
.github/workflows/: build.yml  release.yml
.opencode/tools/: dgat.ts
benchmark/: BENCHMARK_PLAN.md  benchmark_chart.txt  create_png_chart.py  generate_chart.py  performance_chart_summary.txt  run_benchmark.sh
benchmark/results/: benchmark_results_20260406_110038.json  benchmark_results_20260406_110216.json  benchmark_results_20260406_111855.json  benchmark_results_20260406_111855_fixed.json  benchmark_results_20260406_112818.json  benchmark_results_20260406_113758.json  benchmark_results_20260406_113758_fixed.json  benchmark_summary.md
benchmark/scripts/: benchmark_runner.py  simple_benchmark.sh
dgat-mcp/: package-lock.json  package.json
dgat-mcp/src/: client.ts  index.ts  tools.ts  tools.ts.backup  types.ts
dgat-opencode/: README.md  setup.sh
dgat-opencode/agents/: dgat-architect.json
dgat-opencode/skills/: dgat-analyze.md  dgat-review.md
dgat-opencode/tools/: dgat.ts
docs/: index.html  overview.md  pip-package.md  vercel.json
docs/examples/: config.json  dgat-self.html  index.html  wrapper.html
docs/examples/dgat-self/: config.json  index.html
docs/examples/hermes-agent/: app.html
examples/dgat-self/: README.md
frontend/: .gitignore  export.sh  index.html  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  theme.json  tsconfig.json  vite.config.ts
frontend/dist-export/: index.html
frontend/src/: export-main.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/blueprint/: route.ts
frontend/src/components/: DescriptionCardGrid.tsx  DetailPanel.tsx  FileCardGrid.tsx  FileTree.tsx  GraphNodePanel.tsx  GraphView.tsx  MarkdownPanel.tsx
frontend/src/components/ui/: scroll-area.tsx
frontend/src/lib/: fileIcons.ts  types.ts
queries/: README.md  c-sharp.scm  c.scm  cpp.scm  go.scm  java.scm  javascript.scm  python.scm  ruby.scm
renderwise-forge-main/: .vade-report  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json
renderwise-forge-main/public/: config.json
renderwise-forge-main/public/examples/autokernel/: dep_graph.json  dgat_blueprint.md  file_tree.json
renderwise-forge-main/public/examples/claw-code/: dep_graph.json  dgat_blueprint.md  file_tree.json
renderwise-forge-main/public/examples/cleanrl/: dep_graph.json  dgat_blueprint.md  file_tree.json
renderwise-forge-main/public/examples/dgat-self/: dgat_blueprint.md
renderwise-forge-main/public/examples/fff_nvim/: dep_graph.json  dgat_blueprint.md  file_tree.json
renderwise-forge-main/public/examples/gstack/: dep_graph.json  dgat_blueprint.md  file_tree.json
renderwise-forge-main/public/examples/heavyball/: dep_graph.json  dgat_blueprint.md  file_tree.json
renderwise-forge-main/public/examples/hermes-agent/: dep_graph.json  dgat_blueprint.md  file_tree.json
renderwise-forge-main/public/examples/mirage/: dep_graph.json  dgat_blueprint.md  file_tree.json
renderwise-forge-main/public/examples/nanoGPT/: dep_graph.json  dgat_blueprint.md  file_tree.json
renderwise-forge-main/public/examples/prime-rl/: dep_graph.json  dgat_blueprint.md  file_tree.json
renderwise-forge-main/public/examples/pufferlib/: dep_graph.json  dgat_blueprint.md  file_tree.json
renderwise-forge-main/public/examples/stockfish/: dep_graph.json  dgat_blueprint.md  file_tree.json
renderwise-forge-main/public/examples/thunder-kittens/: dep_graph.json  dgat_blueprint.md  file_tree.json
renderwise-forge-main/public/examples/turboquant_cutile/: dep_graph.json  dgat_blueprint.md  file_tree.json
renderwise-forge-main/src/: App.tsx  index.css
renderwise-forge-main/src/components/: CodeBlock.tsx  Footer.tsx  GraphExplorer.tsx  ImageViewer.tsx  Navbar.tsx  SvgGraphPlaceholder.tsx  ThemeToggle.tsx  markdownpanel.tsx
renderwise-forge-main/src/docs/: dependency-graph.md  file-tree.md  import-extraction.md  incremental-updates.md
renderwise-forge-main/src/lib/: theme.ts  types.ts
renderwise-forge-main/src/pages/: DocsDetailPage.tsx  DocsPage.tsx  ExampleDetailPage.tsx  ExamplesPage.tsx  HomePage.tsx  Index.tsx
scripts/: export-example.cjs
setup/: 01-prerequisites.md  02-build-dgat.md  03-setup-llm.md  04-setup-frontend.md  05-setup-opencode.md  06-setup-mcp.md  07-quick-start.md  08-troubleshooting.md  dgat-setup.sh
src/dgat/: __init__.py  __main__.py  _installer.py  cli.py  config.py  mcp.py  scanner.py  server.py  types.py  ui.html
src/dgat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dgat/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  openrouter.py  vllm.py
src/dgat/queries/: c-sharp.scm  go.scm  ipython.scm  php.scm  rust.scm
tmp/: dgat_test_bin  test_lines_bin
