[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dgat"
version = "1.0.4"
description = "Dependency Graph as a Tool - LLM-annotated code dependency analysis"
readme = "PYPI_README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "DGAT Contributors"}
]
keywords = ["dependency-graph", "code-analysis", "mcp", "llm", "tool"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "typer>=0.9",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
dgat = "dgat.cli:app"

[project.urls]
Homepage = "https://dgat.vercel.app"
Repository = "https://github.com/HyperKuvid-Labs/DGAT"
Issues = "https://github.com/HyperKuvid-Labs/DGAT/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dgat = ["py.typed", "bin/*", "queries/*.scm", "grammars/**"]
